--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JAP Jardins com Vida - Jardinagem e Piscinas em Palmela</title>
+    <title>JAP Serviços Manutencão Piscinas e Jardins</title>
     <meta name="description" content="Empresa especializada em serviços de jardinagem, manutenção de jardins, construção e tratamento de piscinas em Palmela. Profissionalismo e qualidade garantidos." />
-    <meta name="author" content="JAP Jardins com Vida" />
+    <meta name="author" content="JAP Serviços Manutencão Piscinas e Jardins" />
     <meta name="keywords" content="jardinagem, piscinas, manutenção jardins, Palmela, relva, paisagismo" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="JAP Jardins com Vida - Jardinagem e Piscinas" />
+    <meta property="og:title" content="JAP Serviços Manutencão Piscinas e Jardins" />
     <meta property="og:description" content="Empresa especializada em serviços de jardinagem e manutenção de piscinas em Palmela." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
